--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "files.associations": {
         "controller_pid.h": "c",
         "stabilizer_types.h": "c",
-        "usec_time.h": "c"
+        "usec_time.h": "c",
+        "math3d.h": "c"
     }
 }
